added edit delete and update to products router

--- a/public/style.css
+++ b/public/style.css
@@ -40,3 +40,13 @@ form div {
   position: relative;
   background-color: white;
 }
+
+#cart-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+}
+a {
+  color: black;
+}
