--- a/public/style.css
+++ b/public/style.css
@@ -39,9 +39,8 @@ form div {
   margin: 1rem;
   opacity: 80%;
   position: relative;
-
 }
-#item-dec{
+#item-dec {
   height: fit-content;
   width: 160px;
   max-width: 160px;
@@ -56,14 +55,13 @@ a {
   color: black;
 }
 
-#item{
+#item {
   margin: 1rem;
-
 }
-#title{
+#title {
   font-size: 20px;
 }
-#checkout{
+#checkout {
   margin-left: 20px;
   height: 30px;
   width: 150px;
@@ -71,87 +69,135 @@ a {
   border: none;
   border-radius: 10px;
 }
-#checkout:hover{
+#checkout:hover {
   cursor: pointer;
   background-color: #f6d892;
 }
 
-#delete{
+#delete {
   height: 30px;
   width: 100%;
   background-color: #d00d10;
   color: white;
   border-radius: 10px;
-  border: none
+  border: none;
 }
-#delete:hover{
+#delete:hover {
   background-color: red;
   cursor: pointer;
 }
 
-.single-page-delete{
+.single-page-delete {
   height: 30px;
   width: 150px;
   background-color: #d00d10;
   color: white;
   border-radius: 10px;
-  border: none
+  border: none;
 }
 
-.single-page-delete:hover{
+.single-page-delete:hover {
   background-color: red;
   cursor: pointer;
 }
 
-.quantity-input{
+.quantity-input {
   margin-top: 10px;
   height: 20px;
   width: 100%;
   margin-left: auto;
 }
 /* login */
-#login{
+#login {
   display: flex;
   flex-direction: column;
 }
 
 /* checkouted page */
-#checkedout-body{
+#checkedout-body {
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-#checkedOut{
+#checkedOut {
   font-size: 25px;
 }
 
 /* singleProduct */
-#singleProduct{
+#singleProduct {
   width: 100%;
   height: 100%;
   display: flex;
   margin: 20px;
 }
-#product-image{
+#product-image {
   height: 250px;
   width: 250px;
 }
 
-#description{
+#description {
   margin-left: 20px;
 }
 
-.price{
+.price {
   font-size: 24px;
 }
 
-#star{
+#star {
   height: 20px;
   width: 20px;
   margin-left: 4px;
 }
-#rating{
+#rating {
   display: flex;
+}
+
+/* sign in */
+#login-window {
+  width: 100%;
+  height: 100%;
+  /* background-color: #53b4e7; */
+}
+#login-form {
+  width: 28%;
+  min-width: 300px;
+  height: 400px;
+  background-color: white;
+  margin: auto;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border: solid black 2px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#form-submit {
+  width: 75%;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+}
+
+.input-div {
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+}
+.input-div label {
+  align-self: flex-start;
+  margin-left: 10%;
+}
+
+.login-input {
+  height: 35px;
+  width: 80%;
+  border-radius: 5px;
+  border: solid 1px;
 }
