--- a/public/style.css
+++ b/public/style.css
@@ -146,12 +146,12 @@ a {
   width: 100%;
   height: 100%;
   display: flex;
-  margin: 20px;
+  flex-wrap: wrap;
   position: relative;
 }
 #product-image {
-  height: 250px;
   width: 250px;
+  height: 250px;
 }
 
 #description {
@@ -226,6 +226,7 @@ a {
 #all-items {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .order {
@@ -236,4 +237,30 @@ a {
   justify-content: space-evenly;
   align-items: center;
   margin-top: 20px;
+}
+
+@media only screen and (max-width: 500px) {
+  #singleProduct {
+    align-items: center;
+  }
+  #description {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+  #product-image {
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .single-page-delete {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #order-page {
+    margin: 0;
+  }
+  .order {
+    font-size: 16px;
+  }
 }
