--- a/public/style.css
+++ b/public/style.css
@@ -241,7 +241,7 @@ a {
 
 .order {
   height: 50px;
-  background-color: lightgrey;
+  background-color: goldenrod;
   display: flex;
   font-size: 20px;
   justify-content: space-evenly;
